   quoted remark message.
   - Added part to upgrade script to convert old remarks to the newer format.
 * Fixed upgrade script to actually allow upgrades.
 * Changed resolutions to be stored as their printable strings, instead of
 their ID's.
 * Made iconForResolution and messageForResolution not mind if they receive
 the resolution id or printable string.

2009-06-03 (dazjorz)
 * Imported frontend directory.
 * Updated README and AUTHORS because likeback doesn't only contain the
 backend anymore.

2009-05-16 (dazjorz)
 * Moved all of the backend to the backend/ directory.

2009-05-15 (dazjorz)
 * Fixed encoding issues in Likeback: send.php no longer calls utf8_decode,
 the install and upgrade scripts set the default character encoding to
 utf8_unicode_ci.
 * Fixed caching issue, created a new 'cache' directory and let Smarty cache
 to that.
 * Updated README file.

2009-05-14 (dazjorz)
 * Fixed syntax bug in upgrade12to13.php.
 * Removed smarty_iconForType and smarty_iconForStatus in favor of the message
 modifier.
 * Removed 'id' argument to iconForStatus and iconForResolution, they were for
 the Javascript code which has been removed.
 * Fixed the commenttable to display the resolution icon if the status is
 closed.
 * Added some input checking to options.php, and fixed an XHTML issue.
 * Gave the options page a graphical overhaul.
 * Added to the options page a form to change and delete existing resolutions,
 and add new ones, and wrote the actual script that does that.

2009-05-13 (dazjorz)
 * Replaced statuses "Thanks", "Solved", "Wontfix" and "Invalid" with
 "Closed".
 * Added to install and upgrade script to create a LikeBackResolutions table
 with Thanks, Solved, Wontfix and Invalid, and added a resolutions column to
 the LikeBack table.
 * Added to upgrade script to set status for all closed comments to Closed and
 set the Resolutions column appropriately.
 * Fixed bug in functions.php: for the 'closed' status (and the now invalid